css/components.css
/*
  ===================================================
  Components
  ===================================================
*/

/* Window */
.window
{
  position: relative;
  width: 100%;
  height: 100%;
}

/* for windows that have a 'real' OS-visible title bar */
.window--app
{
  padding-top: 30px;
}

.window--modal
{
	display: inline-block;
	text-align: left;
	background: white;
	z-index: 200;
	width: 350px;
	min-height: 110px;
	height: auto;
	padding-top: 30px;
  overflow: hidden;
}

.window--modal.window--stretch
{
  display: block;
  position: absolute;
	top: 40px;
	left: 40px;
	right: 40px;
	bottom: 40px;
	width: auto;
	height: auto;
  border-radius: 10px !important;
}

.window--modal.window--auto
{
  display: block;
  position: absolute;
  width: auto;
  height: auto;
  max-width:90vh;
  left: 50%; top: 50%;
  transform: translate(-50%,-50%);
}
.window--modal.window--auto >  .window__viewport
{
   max-height:90vh;
   border-radius: 1em !important;
 }

.window--modal.window--center
{
  display: block;
  position: absolute;
  height: auto;
  left: 50%;
  top: 50%;
  transform: translate(-50%,-50%);
}
.window--modal.window--center > .window__viewport
{
  max-height: 80vh; /*80% of vertical window height */
}

.window__title-bar
{
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}

.window--app > .window__title-bar
{
  z-index: 100;
  -webkit-app-region: drag;
}

.window--modal .window__title-bar .title-bar__title
{
  text-align: left;
}

.window__viewport
{
  position: relative;
  width: 100%;
  height: 100%;
  overflow: auto;
}

.window__overlay
{
	display: table;
  position: absolute;
  top: 0;
  left: 0;
	width: 100%;
	height: 100%;
  background: rgba(0,0,0,0.4);
  z-index: 199;
}

.window__overlay-inner
{
	display: table-cell;
 	text-align: center;
 	vertical-align: middle;
}


/* Title Bar */
.title-bar
{
  background: #333;
  color: #fff;
  height: 30px;
}

  .title-bar__title
  {
    text-align: center;
    font-size: 100%;
    line-height: 30px;
    text-transform: uppercase;
    margin: 0;
    padding: 0 10px;
  }

  .title-bar__buttons
  {
    position: absolute;
    top: 0;
    right: 0;
  }

  .title-bar__button
  {
    display: inline-block;
    -webkit-app-region: no-drag
  }

/* Toolbar */
.toolbar
{
  position: relative;
  background: linear-gradient(135deg, #3ba9ef 0%, #1981ca 100%);
  height: 60px;
  padding: 0px;
  overflow: hidden;
}

.toolbar .toolbar__buttons--right {
  display: inline-flex;
  align-items: center;
  height: 100%;
}

.tab-search-container {
  width: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  transition: width 0.2s ease, margin-right 0.2s ease;
  margin-right: 10px;
  height: 100%;
}

.tab-search-container--open {
  width: 220px;
  margin-left: 6px;
}

.tab-search-input {
  width: 100%;
  height: 36px;
  border: 1px solid rgba(255,255,255,0.35);
  border-radius: 8px;
  background: rgba(255,255,255,0.15);
  color: #fff;
  padding: 0 10px;
  outline: none;
}

.tab-search-input::placeholder {
  color: rgba(255,255,255,0.75);
}

.tab-search-input:focus {
  border-color: rgba(255,255,255,0.7);
  background: rgba(255,255,255,0.22);
}

#icon-tabSearch,
#icon-tabSearch:hover {
  background-color: transparent !important;
}

#icon-tabSearch.tab-search-active,
#icon-tabSearch.tab-search-active:hover {
  background-color: #f39c12 !important;
}

.compact .tab-search-container--open {
  width: 170px;
}

.compact .toolbar .toolbar__buttons--right {
  height: 30px;
}

.compact .tab-search-input {
  height: 24px;
  font-size: 11px;
}
#leftbar{
  background: transparent !important;
}

/* Menu */
a:hover > .menu
{
  display: block;
}

.menu
{
  display: none;
  position: absolute;
  width: 230px;
  padding: 10px;
  background: #2c80b9;
  z-index: 2000;
}

  .menu a
  {
    color: #fff;
    font-weight: bold;
    text-transform: uppercase;
    display: block;
    line-height: 30px;
  }

  .menu a:hover
  {
    background: rgba(0,0,0,0.3);
  }

  .menu a i
  {
    vertical-align: middle;
  }

  .toolbar .menu { background: #2c80b9; }
  .toolbar .toolbar__buttons--left .menu { top: 60px; left: 0; }
  .toolbar .toolbar__buttons--right .menu { top: 60px; right: 0; }

  .sidebar .menu { background: #373d3e; }
  .sidebar .sidebar__buttons--top .menu { top: 0; left: 60px; }
  .sidebar .sidebar__buttons--bottom .menu { bottom: 0; left: 60px; }

  /* Full (un-split) Pane */
  .full-pane
  {
  	position: absolute;
  	margin-top: 60px;
  	top: 0;
  	right: 0;
  	bottom: 30px;
  	left: 0;
  }

/* Split Pane */
.split-pane
{
	position: absolute;
	margin-top: 60px;
	top: 0;
	right: 0;
	bottom: 30px;
	left: 0;
}

/* Loading indicator */
.split-pane__loading {
  position:absolute;
  top:50%;left:50%;
  transform: translate(-50%,-50%);
  font-size:24px;
  font-weight: bold;
  color:#888;
}

/* Status */
.status
{
        position: absolute;
        left: 0;
        bottom: 0;
        right: 0;
        background: #42484a;
        color: #fff;
        height: 30px;
        width: 100%;
}

.status h5
{
        display: inline-block;
        font-size: 100%;
        line-height: 30px;
        text-transform: uppercase;
}


.status__port
{
        margin: 0;
        padding: 0 10px;
}

.status__message
{
        margin: 0;
        padding: 0 10px;
}

/* Progress */
.status__progress
{
        display: inline-block;
        position: relative;
        width: 180px;
        height: 4px;
        top: -1px;
        margin: 0px;
        vertical-align: middle;
        background: rgba(0,0,0,0.2);
}

.status__progress-bar
{
        background: #2ecc71;
        width: 0%;
        height: 4px;
        max-width: 100% !important;
}

/* Editor Wrapper */
.editor
{
	position: relative;
	width: 100%;
	height: 100%;
}

.editor__sidebar
{
	position: absolute;
	top: 0;
	left: 0;
}

.editor__canvas
{
        position: absolute;
        top: 0;
        left: 60px;
        right: 0;
        bottom: 0;
        overflow: hidden;
}
/* ... */

